--- a/dañospordrogas.html
+++ b/dañospordrogas.html
@@ -1,65 +1,47 @@
-<html>
+<html> 
+<head>
+<title> Daños por las drogas </title> 
+<link rel="stylesheet" href="css/fondodepagina.css"> 
+</head> 
+<body> 
+			<h1> ¿Qué te causan las drogas? </h1> 
+			<h2> Tu vida vale más que cualquier cosa </h2> 
+<h3>El consumo de las drogas en menores de edad son muchos los riegos que corren al consumir estas sustancias. 
+<br> No consumas lo que daña a tu cuerpo
+</h3> 
+<img src = " Imagenes / Daños.jpeg " height = " 250 " > 
+<a href = " index.html " > 
+</a> 
+<h3> Índice de vinculo a pagina </h3> 
+<table border = " 1 " >
+ <tr> Organismos dañados
+ <td> Cerebro 
+<td> Distintos estudios han, intentado poner de manifiesto hasta ahora que la cocaína, esnifada a grandes dosis, es la responsable de distintos grados de alteraciones mentales encontradas entre consumidores habituales.
+Pero su relación con los accidentes cerebrovasculares  
+</td> </td> 
+<tr> 
+<td> Higado 
+<td> El hígado es uno de los órganos más afectados 
+por el consumo de alcohol al metabolizar el 90% que absorbe el organismo
+ Los efectos nocivos del alcohol en el hígado provocan tres síndromes
+ evolutivos: hígado graso, hepatitis alcohólica y cirrosis hepática alcoólica. 
+El alcohol constituye el 7º factor de riesgo de mortalidad 
+y de reducción de la calidad de vida a nivel mundial,
+ y el primero en el grupo de edad de 15 a 49 años.
+ </td> 
+<tr>
+ <td> 
+<a href = " https://www.youtube.com/watch?v=uLMukMpxnts " > 
+<button id = "Primerboton" > VIDEODAÑOS </button> </td> 
 
-  <head>
-    <title>Daños por las drogas </title>
-    <link rel="stylesheet" href="css/fondodepagina.css">
-  </head>
+<td>
+ <a href = "Portada.html" >
+ <button id ="Primerboton"> PORTADA </button> 
+<button id="Primerboton"> INDEX </button>
+</a>
+ </td> 
 
-  <body>
-    <h1>¿Qué te causan las drogas?</h1>
-    <h2>Tu vida vale más que cualquier cosa </h2>
-    <h3>El consumo de las drogas en menores de edad son muchos los riegos que corren
-      al consumir estas sustancias.
-      <br>No consumas lo que daña a tu cuerpo </h3>
-    <img src="Imagenes/Daños.jpeg" height="250">
-    <a href="index.html"> </a>
-    <h3>Vinculo a pagina index </h3>
-    <table border="1">
-      <tr>Organismos dañados
-        <td>Cerebro
-          <td>Distintos estudios han. intenta do poner de manifiesto hasta ahora que
-            la cocaína, esnifada a grandes dosis, es la responsable de distintos
-            grados de alteraciones mentales encontradas entre consumidores habituales
-            Pero su relación con los accidentes cerebrovasculares </td>
-        </td>
+</tr> 
+</body>
 
-
-
-        <tr>
-          <td>Higado
-            <td>El hígado es uno de los órganos más afectados por el consumo de alcohol
-              al metabolizar el 90% que absorbe el organismo Los efectos nocivos
-              del alcohol en el hígado provocan tres síndromes evolutivos: hígado
-              graso, hepatitis alcohólica y cirrosis hepática alcohólica. El alcohol
-              constituye el 7º factor de riesgo de mortalidad y de reducción de
-              la calidad de vida a nivel mundial, y el primero en el grupo de edad
-              de 15 a 49 años.</td>
-            <tr>
-
-              <td>
-                <a href="https://www.youtube.com/watch?v=uLMukMpxnts">
-                  <button id="Primerboton">VIDEODAÑOS </button>
-              </td>
-              <td>
-                <a href="index.html">
-                  <button id="Primerboton">INDEX </button>
-                </a>
-              </td>
-              <td>
-                <a href="Portada.html">
-                  <button id="Primerboton">PORTADA </button>
-                </a>
-              </td>
-            </tr>
-
-  </body>
-
-</html>
-<!--
-Visual Code Mobile
-Developed By Manish Nirmal
-App Available on Play Store :-
-https://play.google.com/store/apps/details?id=lk.visual.code.mobile
-YouTube :-
-https://youtube.com/ManishNirmal
--->
+ </html>
