--- a/index.html
+++ b/index.html
@@ -2,71 +2,68 @@
 
   <head>
     <title>La concecuencias de nuetros actos </title>
+    <link rel="stylesheet" href="css/fondodepagina.css">
   </head>
 
   <body>
     <h1>El consumo de sustancias dañinas para la salud</h1>
     <h3> No te dañes </h3>
     <p> La mayoria de los jovenes en la actualidad, consumen sustancias ilicitas y
-      dañinas para la salud
-      <br>Son capaces de realizar delitos con la unica intencion de obtener lo que
-      ellos buscan
-      <img src="imagenes/drogas.jpeg">
-      <br>
-      <video src="videos/video.MOV" width="210" height="150" controls>
-
-
-        <a href="dañospordrogas.html">
-          <h3> Vinculo a la pagina de los daños por las drogas </h3>
-        </a>
-
-        <table border="1">
-          <tr>Daños
-            <td> Nombre de las sustancias dañinas </td>
-            <td> Tratamiento </td>
-          </tr>
-          <tr>Drogas
-            <td> Cocaina </td>
-            <td>En el 2006, la cocaína representaba alrededor del 14 por ciento de
-              todas las admisiones a los programas de tratamiento para el abuso
-              de drogas. En la actualidad no hay un medicamento aprobado por la
-              Administración de Drogas y Alimentos (FDA, por sus siglas en inglés)
-              de los Estados Unidos que sirva para tratar la adicción a la cocaína.
-               Varios medicamentos comercializados para el tratamiento de otras
-              enfermedades (por ejemplo, baclofeno, modafinilo, tiagabina, disulfiram
-              y topiramato) muestran potencial terapéutico y, en estudios clínicos
-              controlados, se ha reportado que disminuyen el consumo de cocaína.
-              Entre estos medicamentos, el disulfiram (utilizado para tratar el
-              alcoholismo) ha sido el que más consistentemente ha disminuido el
-              abuso de cocaína.
-            </td>
-            <tr>
-              <td> Alcoholismo
-                <td>El tratamiento consiste en terapia y sedantes El tratamiento incluye
-                  el asesoramiento por parte de un profesional del cuidado de la
-                  salud. Una opción para aquellos que necesitan ayuda adicional
-                  son los programas de desintoxicación en hospitales o instalaciones
-                  médicas. Existen medicamentos que reducen el deseo de consumir
-                  alcohol </td>
-              </td>
-
-
-            </tr>
+      dañinas para la salud </p>
+    <br>Son capaces de realizar delitos con la unica intencion de obtener lo que ellos
+    buscan
+    <img src="imagenes/drogas.jpeg">
+    <br>
 
 
 
-            <tr>
-              <td>
-                <a href="dañospordrogas.html">
-                  <button id="Segundoboton">DAÑOS </button>
-                </a>
-              </td>
-              <td>
-                <a href="Portada.html">
-                  <button id="Segundoboton">PORTADA </button>
-                </a>
-              </td>
-            </tr>
+    <a href="dañospordrogas.html">
+      <h3> Vinculo a la pagina de los daños por las drogas </h3>
+    </a>
+
+    <table border="1">
+      <tr>Daños
+        <td> Nombre de las sustancias dañinas </td>
+        <td> Tratamiento </td>
+      </tr>
+      <tr>Drogas
+        <td> Cocaina </td>
+        <td>En el 2006, la cocaína representaba alrededor del 14 por ciento de todas
+          las admisiones a los programas de tratamiento para el abuso de drogas.
+          En la actualidad no hay un medicamento aprobado por la Administración
+          de Drogas y Alimentos (FDA, por sus siglas en inglés) de los Estados
+          Unidos que sirva para tratar la adicción a la cocaína.  Varios medicamentos
+          comercializados para el tratamiento de otras enfermedades (por ejemplo,
+          baclofeno, modafinilo, tiagabina, disulfiram y topiramato) muestran potencial
+          terapéutico y, en estudios clínicos controlados, se ha reportado que
+          disminuyen el consumo de cocaína. Entre estos medicamentos, el disulfiram
+          (utilizado para tratar el alcoholismo) ha sido el que más consistentemente
+          ha disminuido el abuso de cocaína.
+        </td>
+        <tr>
+          <td> Alcoholismo
+            <td>El tratamiento consiste en terapia y sedantes El tratamiento incluye
+              el asesoramiento por parte de un profesional del cuidado de la salud.
+              Una opción para aquellos que necesitan ayuda adicional son los programas
+              de desintoxicación en hospitales o instalaciones médicas. Existen
+              medicamentos que reducen el deseo de consumir alcohol </td>
+          </td>
+
+
+        </tr>
+
+
+
+        <tr>
+          <td>
+            <a href="dañospordrogas.html"><button id="Primerboton">DAÑOS </button> </a>
+          </td>
+          <td>
+            <a href="Portada.html">
+              <button id="Primerboton">PORTADA </button>
+            </a>
+          </td>
+        </tr>
   </body>
 
 </html>
