--- a/Portada.html
+++ b/Portada.html
@@ -2,6 +2,7 @@
 
   <head>
     <title>Portada de la semana dos </title>
+    <link rel="stylesheet" href="css/fondodepagina.css">
   </head>
 
   <body>
@@ -23,8 +24,10 @@
   </body>
   <a href="index.html">
     <h3>Vinculo a pagina para index
-			
-		
+      <button id="Primerboton">INDEX </button>
+<a href="dañospordrogas.html">   
+ <button id="Primerboton">DAÑOSPORDRGAS </button>
+			</a>
 </html>
 <!--
 Visual Code Mobile
