--- a/Portada.html
+++ b/Portada.html
@@ -20,7 +20,7 @@
       <h4> En este proyecto busco hacer o crear concienia, sobre los jovenes que consumen
         estas sustancias dañinas tratando de generarles un apoyo en el cual expresar
         como sobre salir de esa adversidad</h4>
-      <img src="Imagenes/colegio.jpg" height="250">
+      <img src="imagenes/colegio.jpg" height="250">
   </body>
   <a href="index.html">
     <h3>Vinculo a pagina para index
