--- a/dañospordrogas.html
+++ b/dañospordrogas.html
@@ -9,7 +9,7 @@
 <h3>El consumo de las drogas en menores de edad son muchos los riegos que corren al consumir estas sustancias. 
 <br> No consumas lo que daña a tu cuerpo
 </h3> 
-<img src = " imagenes / Daños.jpeg " height = " 250 " > 
+<img src = " imagenes / danos.jpeg " height = " 250 " > 
 <a href = " index.html " > 
 </a> 
 <h3> Índice de vinculo a pagina </h3> 
